--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@ body {
   color:#222;
 }
 a {
-  color: #222;
+  color: #5E5EE8;
 }
 a:hover, a:visited:hover {
   color:#006600;
@@ -109,7 +109,9 @@ outline: 4px solid skyblue;
 }
 
 [aria-labelledby="gallery-label"] ul {
-    display: flex;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(5, minmax(540px, 540px));
 }
 [aria-labelledby="gallery-label"] li {
     list-style: none;
@@ -120,8 +122,6 @@ outline: 4px solid skyblue;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    width: 100%;
-    height: 50vh;
 }
 [aria-labelledby="gallery-label"] figcaption {
     height: 2rem;
